[gd_scene load_steps=4 format=3 uid="uid://bxfamky52p7na"]

[ext_resource type="Script" path="res://Scripts/pre_game_menu.gd" id="1_r1urf"]

[sub_resource type="CanvasTexture" id="CanvasTexture_gnx8g"]

[sub_resource type="LabelSettings" id="LabelSettings_bxupk"]
font_size = 32

[node name="PreGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r1urf")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.211765, 0.333333, 0.184314, 1)
layout_mode = 0
offset_right = 1283.0
offset_bottom = 730.0
texture = SubResource("CanvasTexture_gnx8g")

[node name="UnitPoolLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 50.0
offset_right = 43.5
offset_bottom = 73.0
grow_horizontal = 2
text = "UNIT POOL"
label_settings = SubResource("LabelSettings_bxupk")

[node name="UnitChosenLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.5
offset_top = 423.0
offset_right = 107.5
offset_bottom = 468.0
grow_horizontal = 2
text = "UNIT CHOSEN"
label_settings = SubResource("LabelSettings_bxupk")

[node name="Scale" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UnitPool" type="GridContainer" parent="Scale"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 64.0
grow_horizontal = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(100, 0)
columns = 3

[node name="UnitChosen" type="GridContainer" parent="Scale"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -64.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(5, 5)
pivot_offset = Vector2(100, 64)
columns = 3

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 1167.0
offset_top = 13.0
offset_right = 1263.0
offset_bottom = 44.0
text = "Start Game"
flat = true

[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
